[package]
name = "basic_slam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
motion_models ={git = "https://github.com/dfnstrtn/motion_models.git"}
probability = "0.18.0"
num-traits = "0.2.8"
